; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cassette.c_CASSETTE_LeaderLoad.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_cassette.c_CASSETTE_LeaderLoad.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CASSETTE_record = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@cassette_gapdelay = common dso_local global i32 0, align 4
@CPU_regA = common dso_local global i32 0, align 4
@CPU_regX = common dso_local global i64 0, align 8
@CPU_regY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CASSETTE_LeaderLoad() #0 {
  %1 = load i64, i64* @CASSETTE_record, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = call i32 (...) @CASSETTE_ToggleRecord()
  br label %5

5:                                                ; preds = %3, %0
  %6 = load i32, i32* @TRUE, align 4
  %7 = call i32 @CASSETTE_TapeMotor(i32 %6)
  store i32 9600, i32* @cassette_gapdelay, align 4
  store i32 3, i32* @CPU_regA, align 4
  store i64 0, i64* @CPU_regX, align 8
  store i32 5, i32* @CPU_regY, align 4
  ret void
}

declare dso_local i32 @CASSETTE_ToggleRecord(...) #1

declare dso_local i32 @CASSETTE_TapeMotor(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
